# Sistemas-Operativos-Proyecto-1

./: .gitignore  ARQUITECTURA.md  CHECKLIST.md  CMakeLists.txt  COMPILACION.md  GUIA_USO.md  README.md  RESUMEN.md  build.bat  build.sh
include/: client.h  message_handler.h  server.h  tcp_handler.h
src/client/: client.cpp  main.cpp
src/server/: client_handler.cpp  main.cpp  server.cpp
src/utils/: message_handler.cpp  tcp_handler.cpp
